--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,14 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.gallery__item{
+  list-style: none;
+
+}
